--- a/deferat.csproj
+++ b/deferat.csproj
@@ -6,5 +6,6 @@
     <PackageReference Include="Microsoft.AspNetCore.App"/>
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All"/>
     <PackageReference Include="Markdig" Version="0.15.6"/>
+    <PackageReference Include="YamlDotNet" Version="5.3.0"/>
   </ItemGroup>
 </Project>
