--- a/deferat.csproj
+++ b/deferat.csproj
@@ -7,5 +7,6 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All"/>
     <PackageReference Include="Markdig" Version="0.15.6"/>
     <PackageReference Include="YamlDotNet" Version="5.3.0"/>
+    <PackageReference Include="HtmlAgilityPack.NetCore" Version="1.5.0.1"/>
   </ItemGroup>
 </Project>
