--- a/deferat.csproj
+++ b/deferat.csproj
@@ -11,4 +11,7 @@
     <PackageReference Include="YamlDotNet" Version="5.3.0" />
     <PackageReference Include="HtmlAgilityPack.NetCore" Version="1.5.0.1" />
   </ItemGroup>
+  <ItemGroup>
+      <DotNetCliToolReference Include="DotnetPublishSsh" Version="0.1.0" />
+  </ItemGroup>
 </Project>
