--- a/.github/workflows/deploy-demo.yml
+++ b/.github/workflows/deploy-demo.yml
@@ -1,7 +1,4 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy ASP.Net Core app to Azure Web App - deferat
+name: Deploy Demo Site
 
 on:
   push:
@@ -20,19 +17,22 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '5.0.x'
-        include-prerelease: true
 
     - name: Build with dotnet
       run: dotnet build src --configuration Release
 
     - name: dotnet publish
-      run: dotnet publish src -c Release -o ${{env.DOTNET_ROOT}}/myapp
+      run: dotnet publish src -c Release -o ${{env.DOTNET_ROOT}}/deploy
 
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
       with:
         name: .net-app
-        path: ${{env.DOTNET_ROOT}}/myapp
+        path: |
+            ${{env.DOTNET_ROOT}}/deploy
+            ${{env.DOTNET_ROOT}}/Authors
+            ${{env.DOTNET_ROOT}}/Posts
+            ${{env.DOTNET_ROOT}}/Settings
 
   deploy:
     runs-on: ubuntu-latest
